# ai_projects

./: .gitignore  README.md  README_EN.md
agentic_rag/: README.md  README_EN.md  docker-compose.yml  env.example  pyproject.toml
agentic_rag/apps/api/: README.md  README_EN.md  pyproject.toml
agentic_rag/apps/api/src/api/: README.md  README_EN.md
agentic_rag/apps/api/src/api/agents/: agents.py  graph.py  tools.py
agentic_rag/apps/api/src/api/agents/prompts/: coordinator_agent.yaml  intent_router_agent.yaml  product_qa_agent.yaml  retrieval_generation.yaml  shopping_cart_agent.yaml  warehouse_manager_agent.yaml
agentic_rag/apps/api/src/api/agents/utils/: utils.py
agentic_rag/apps/api/src/api/api/: endpoints.py  middleware.py  models.py
agentic_rag/apps/api/src/api/api/processors/: submit_feedback.py
agentic_rag/apps/chatbot_ui/: README.md  README_EN.md
agentic_rag/apps/chatbot_ui/src/chatbot_ui/: README.md  README_EN.md  app.py
agentic_rag/notebooks/: README.md
agentic_rag/notebooks/01-RAG/: 01-exlpore-amazon-dataset.ipynb  02-rag-preprocessing-amazon.ipynb  03-rag-pipeline.ipynb  08-hybrid-search.ipynb
agentic_rag/notebooks/02-Agent/: 02-query-rewriting.ipynb  04-single-turn-agent.ipynb  05-multi-turn-agent.ipynb  06-multiple-tools.ipynb  07-human-feedback.ipynb  08-mcp.ipynb  09-streaming-state.ipynb
agentic_rag/notebooks/03-Multi-Agents/: 01-shopping-cart-agent-tools.ipynb  02-shopping-cart-agent.ipynb  03-coordinator-agent.ipynb  04-warehouse-agent-database.ipynb  05-warehouse-agent-tools.ipynb  06-warehouse-agent.ipynb  07-warehouse-agent-adk.ipynb
agentic_rag/notebooks/03-Multi-Agents/utils/: tools.py  utils.py
agentic_rag/notebooks/04-LLMOps/: 02-prompt-caching.ipynb  03-prompt-caching-agent.ipynb  04-human-in-the-loop.ipynb  litellm_router.ipynb
agentic_rag/notebooks/04-LLMOps/utils/: utils.py
agentic_rag/scripts/sql/: shopping_cart_table.sql  warehouse_management.sql
ai_project_prototype/: Makefile  README.md  README_EN.md  env.example  pyproject.toml
ai_project_prototype/apps/api/: README.md  README_EN.md
ai_project_prototype/apps/api/src/api/: app.py
ai_project_prototype/apps/chatbot_ui/: README.md  README_EN.md
ai_project_prototype/apps/chatbot_ui/src/chatbot_ui/: README_EN.md
ai_project_prototype/notebooks/prerequisites/: 01-llm-apis.ipynb
ai_project_prototype/notebooks/week_1/: 01-exlpore-amazon-dataset.ipynb
rag/: Makefile  README.md  (+3 more)
(+61 files in other folders)
