[project]
name = "agentic_rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "ipykernel>=7.3.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=7.0.4",
    "fastapi>=0.137.2",
    "fastembed>=0.8.0",
    "fastmcp>=3.4.3",
    "langchain-community==0.4.1",
    "langgraph==1.0.5",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-prebuilt==1.0.5",
    "langsmith>=0.9.1",
    "litellm>=1.92.0",
    "matplotlib>=3.11.0",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "qdrant-client>=1.18.0",
    "ragas==0.4.2",
]
