[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NightBonsai", email = "1531434991@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.4",
    "fastapi>=0.137.2",
    "google-genai>=2.8.0",
    "instructor>=1.15.3",
    "langgraph==1.0.5",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.9.1",
    "openai>=2.43.0",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"


[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md"
]
